[ADD] entity class 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# ?? ??
+server.port=8080
 
+# ?????? ?? - MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/pingpong
+spring.datasource.username=pingpong_admin
+spring.datasource.password=pingpongadmin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA ??
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Soft-Delete ?? (?? ??? ?? ??)
+# spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
+# spring.jpa.properties.org.hibernate.envers.global_with_modified_flag=true
+# spring.jpa.properties.org.hibernate.envers.use_deleted_flag=true
+# spring.jpa.properties.org.hibernate.envers.audit_strategy=org.hibernate.envers.strategy.ValidityAuditStrategy
+# spring.jpa.properties.org.hibernate.envers.audit_strategy_validity_store_revend_timestamp=true
