--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,20 @@
-# ?? ??
+# port
 server.port=8080
 
-# ?????? ?? - MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/pingpong
-spring.datasource.username=pingpong_admin
-spring.datasource.password=pingpongadmin
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA ??
+# JPA
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Soft-Delete ?? (?? ??? ?? ??)
-# spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
-# spring.jpa.properties.org.hibernate.envers.global_with_modified_flag=true
-# spring.jpa.properties.org.hibernate.envers.use_deleted_flag=true
-# spring.jpa.properties.org.hibernate.envers.audit_strategy=org.hibernate.envers.strategy.ValidityAuditStrategy
-# spring.jpa.properties.org.hibernate.envers.audit_strategy_validity_store_revend_timestamp=true
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:prography;NON_KEYWORDS=USER
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.open-in-view=false
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.sql.init.mode=always
+
+
